add delivery section

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </header> -->
     </div>
     <main>
-      <section class="section">
+      <section class="section" id="gallery">
         <div class="gallery">
           <div class="img">
             <img src="/assets/billiard.jpg" alt="type" />
@@ -63,39 +63,68 @@
         </div>
         <div class="main__img__container">
           <div class="product__card">
-            <img src="assets/tablo_with_pult.png" class="main__img" alt="panel" />
+            <img
+              src="assets/tablo_with_pult.png"
+              class="main__img"
+              alt="panel"
+            />
             <p>Снукер</p>
             <div class="main__color__container">
-              <div class="main__color__button"><div class="color" style="background-color: white;"></div></div>
-              <div class="main__color__button"><div class="color" style="background-color: black;"></div></div>
-              <div class="main__color__button"><div class="color" style="background-color: #67310F;"></div></div>
+              <div class="main__color__button">
+                <div class="color" style="background-color: white"></div>
+              </div>
+              <div class="main__color__button">
+                <div class="color" style="background-color: black"></div>
+              </div>
+              <div class="main__color__button">
+                <div class="color" style="background-color: #67310f"></div>
+              </div>
             </div>
             <button class="main__info__button">Подробнее</button>
           </div>
           <div class="product__card">
-            <img src="assets/tablo_with_pult.png" class="main__img" alt="panel" />
+            <img
+              src="assets/tablo_with_pult.png"
+              class="main__img"
+              alt="panel"
+            />
             <p>Пирамида</p>
             <div class="main__color__container">
-              <div class="main__color__button"><div class="color" style="background-color: white;"></div></div>
-              <div class="main__color__button"><div class="color" style="background-color: black;"></div></div>
-              <div class="main__color__button"><div class="color" style="background-color: #67310F;"></div></div>
+              <div class="main__color__button">
+                <div class="color" style="background-color: white"></div>
+              </div>
+              <div class="main__color__button">
+                <div class="color" style="background-color: black"></div>
+              </div>
+              <div class="main__color__button">
+                <div class="color" style="background-color: #67310f"></div>
+              </div>
             </div>
             <button class="main__info__button">Подробнее</button>
           </div>
           <div class="product__card">
-            <img src="assets/tablo_with_pult.png" class="main__img" alt="panel" />
+            <img
+              src="assets/tablo_with_pult.png"
+              class="main__img"
+              alt="panel"
+            />
             <p>Пул</p>
             <div class="main__color__container">
-              <div class="main__color__button"><div class="color" style="background-color: white;"></div></div>
-              <div class="main__color__button"><div class="color" style="background-color: black;"></div></div>
-              <div class="main__color__button"><div class="color" style="background-color: #67310F;"></div></div>
+              <div class="main__color__button">
+                <div class="color" style="background-color: white"></div>
+              </div>
+              <div class="main__color__button">
+                <div class="color" style="background-color: black"></div>
+              </div>
+              <div class="main__color__button">
+                <div class="color" style="background-color: #67310f"></div>
+              </div>
             </div>
             <button class="main__info__button">Подробнее</button>
           </div>
-        </div>          
-        </div>          
+        </div>
       </section>
-      <section class="section banner__background">
+      <section class="section banner__background" id="banner">
         <div class="wrapper banner__container">
           <div class="banner__title">
             <h3>Доставка</h3>
@@ -133,7 +162,49 @@
           </div>
         </div>
       </section>
-      <section class="section">
+      <section class="section" id="delivery">
+        <div class="delivery__title__container">
+          <div class="delivery__title">
+            <p>Комплектация</p>
+            <img src="assets/chevron_right.svg" />
+          </div>
+        </div>
+        <div class="delivery__scheme__container">
+          <h2>Как оформить заказ</h2>
+          <div class="delivery__scheme">
+            <div class="delivery__step">
+              <img src="assets/delivery1.png" alt="заявка" />
+              <p>
+                Оставьте заявку на нашем сайте или позвоните по номеру <br />
+                <a href="tel:88006007529">8 (800) 600-75-29</a>
+              </p>
+            </div>
+            <div class="delivery__step">
+              <img src="assets/delivery2.png" alt="доставка" />
+              <p>
+                Мы доставляем по всей России и странам СНГ курьером или через
+                пункты самовызова: Почта России (в т.ч. EMS), СДЭК, Boxberry и
+                Яндекс.Доставка. Доставка в Тюмени и Санкт-Петербурге – на
+                следующий день, в Москве возможна в тот же день!
+              </p>
+            </div>
+            <div class="delivery__step">
+              <img src="assets/delivery3.png" alt="оплата" />
+              <p>
+                Оплата любым удобным способом: оплатите на сайте, картой или
+                через СБП (QR-код) со скидкой. Или при получении – наличными или
+                картой. Если у Вас возникли сложности с оплатой на сайте –
+                менеджер магазина поможет решить вопрос во время звонка для
+                подтверждения заказа.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="delivery__button__container">
+          <button class="delivery__button">Оставить заявку</button>
+        </div>
+      </section>
+      <section class="section" id="carousel">
         <div class="plashka__container">
           <div class="plashka">
             <p class="plashka__title">GC Power plus</p>
@@ -150,9 +221,18 @@
             <h2>Гуру многозадачности</h2>
           </div>
           <div class="plashka__buttons">
-            <div><img src="assets/zagluska.svg" />Видеообзор</div>
-            <div><img src="assets/zagluska.svg" />В корзину</div>
-            <div><img src="assets/zagluska.svg" />Фото товара</div>
+            <div>
+              <img src="assets/zagluska.svg" />
+              <p>Видеообзор</p>
+            </div>
+            <div>
+              <img src="assets/zagluska.svg" />
+              <p>В корзину</p>
+            </div>
+            <div>
+              <img src="assets/zagluska.svg" />
+              <p>Фото товара</p>
+            </div>
           </div>
           <div class="carousel">
             <div class="carousel__prev carousel__button">
@@ -221,7 +301,7 @@
           </div>
         </div>
       </section>
-      <section class="section">
+      <!-- <section class="section" id="cards">
         <h2>
           Любой пульт может быть привязан к конкретному табло, что позволяет
           работать с несколькими табло в одном зале
@@ -376,7 +456,7 @@
       </section>
       <section class="section" id="examples">
         <h2>Примеры использования</h2>
-      </section>
+      </section> -->
     </main>
     <footer class="footer">
       <h6 class="contacts__title">Контакты</h6>
