add features section

--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
             <span class="img__text">Бильярд</span>
           </div>
           <div class="img">
-            <img src="/assets/darts.jpg" alt="type" />
-            <span class="img__text">Дартс</span>
+            <img src="/assets/pull.jpg" alt="type" />
+            <span class="img__text">Пул</span>
           </div>
           <div class="img">
-            <img src="/assets/tennis.jpg" alt="type" />
-            <span class="img__text">Теннис</span>
+            <img src="/assets/russian.jpg" alt="type" />
+            <span class="img__text">Русский</span>
           </div>
           <div class="gallery__prev gallery__button">
             <img src="assets/chevron_left.svg" />
@@ -46,118 +46,42 @@
           </div>
         </div>
       </section>
-      <section class="section" id="main">
-        <h1>
-          В четыре раза дешевле Apple <br />
-          и с кучей уникальных фишек
-        </h1>
-        <div class="main__slides__container">
-          <div class="main__slide">
-            <img src="assets/Rubl.svg" />
-            <p>Питание 12V</p>
-          </div>
-          <div class="main__slide">
-            <img src="assets/hnd1.svg" />
-            <p>WI-FI функция для трансляции</p>
-          </div>
-        </div>
-        <div class="main__img__container">
-          <div class="product__card">
-            <img
-              src="assets/tablo_with_pult.png"
-              class="main__img"
-              alt="panel"
-            />
-            <p>Снукер</p>
-            <div class="main__color__container">
-              <div class="main__color__button">
-                <div class="color" style="background-color: white"></div>
-              </div>
-              <div class="main__color__button">
-                <div class="color" style="background-color: black"></div>
-              </div>
-              <div class="main__color__button">
-                <div class="color" style="background-color: #67310f"></div>
-              </div>
-            </div>
-            <button class="main__info__button">Подробнее</button>
-          </div>
-          <div class="product__card">
-            <img
-              src="assets/tablo_with_pult.png"
-              class="main__img"
-              alt="panel"
-            />
-            <p>Пирамида</p>
-            <div class="main__color__container">
-              <div class="main__color__button">
-                <div class="color" style="background-color: white"></div>
-              </div>
-              <div class="main__color__button">
-                <div class="color" style="background-color: black"></div>
-              </div>
-              <div class="main__color__button">
-                <div class="color" style="background-color: #67310f"></div>
-              </div>
-            </div>
-            <button class="main__info__button">Подробнее</button>
-          </div>
-          <div class="product__card">
-            <img
-              src="assets/tablo_with_pult.png"
-              class="main__img"
-              alt="panel"
-            />
-            <p>Пул</p>
-            <div class="main__color__container">
-              <div class="main__color__button">
-                <div class="color" style="background-color: white"></div>
-              </div>
-              <div class="main__color__button">
-                <div class="color" style="background-color: black"></div>
-              </div>
-              <div class="main__color__button">
-                <div class="color" style="background-color: #67310f"></div>
-              </div>
-            </div>
-            <button class="main__info__button">Подробнее</button>
-          </div>
+      <section class="section banner-full-width" id="banner1">
+        <h2>Лучшее в мире табло для игры в снукер</h2>
+        <p>С умными функциями для проведения стримов</p>
+        <div class="banner__circle__container">
+          <div class="banner__circle"></div>
+          <div class="banner__circle"></div>
+          <div class="banner__circle"></div>
+          <div class="banner__circle"></div>
+          <div class="banner__circle"></div>
+          <div class="banner__circle"></div>
+          <div class="banner__circle"></div>
+          <div class="banner__circle"></div>
+          <div class="banner__circle"></div>
+          <div class="banner__circle"></div>
+          <div class="banner__circle"></div>
+          <div class="banner__circle"></div>
+          <div class="banner__circle"></div>
+          <div class="banner__circle"></div>
+          <div class="banner__circle"></div>
         </div>
       </section>
-      <section class="section banner__background" id="banner">
-        <div class="wrapper banner__container">
-          <div class="banner__title">
-            <h3>Доставка</h3>
-            <p>от 180 руб</p>
+      <section class="section" id="features">
+        <div class="features__container">
+          <h2>SmartSnookerBoard</h2>
+          <div class="features__colors__container">
+            <div class="color"></div>
+            <p>Белый</p>
+            <div class="color"></div>
+            <p>Черный</p>
+            <div class="color"></div>
+            <p>Коричневый</p>
           </div>
-          <div class="banner__features__container">
-            <div class="banner__feature">
-              <img src="assets/card.svg" />
-              <div>
-                <h3>Оплата на сайте со скидкой</h3>
-                <p>Или при получении. Рассрочка.</p>
-              </div>
-            </div>
-            <div class="banner__feature">
-              <img src="assets/pig.svg" />
-              <div>
-                <h3>Доступная цена и бонусы</h3>
-                <p>Скидки на второй товар или комплект товаров.</p>
-              </div>
-            </div>
-            <div class="banner__feature">
-              <img src="assets/garant.svg" />
-              <div>
-                <h3>Гарантия 12 месяцев</h3>
-                <p>От производителя.</p>
-              </div>
-            </div>
-            <div class="banner__feature">
-              <img src="assets/support.svg" />
-              <div>
-                <h3>Техническая поддержка</h3>
-                <p>По телефону, в мессенджерах и электронной почте.</p>
-              </div>
+          <div class="features__list">
+            <div class="features__list__element">
+              <div></div>
+              <p>Очень легкое! Без проблем можно повесить табло над столом</p>
             </div>
           </div>
         </div>
@@ -301,162 +225,6 @@
           </div>
         </div>
       </section>
-      <!-- <section class="section" id="cards">
-        <h2>
-          Любой пульт может быть привязан к конкретному табло, что позволяет
-          работать с несколькими табло в одном зале
-        </h2>
-        <div class="card__container">
-          <div class="card">
-            <p>
-              Устройство работает от внешнего блока питания 12 вольт и абсолютно
-              безопасно
-            </p>
-          </div>
-          <div class="card">Картинка БП</div>
-          <div class="card">
-            <p>
-              Табло можно подключать к своей WiFi сети, и устанавливать имена
-              игроков, лимиты игры и настройки сети через веб-интерфейс
-            </p>
-          </div>
-          <div class="card" style="grid-column: 1 / 3">
-            <p>
-              При обращении к табло по его IP адресу из, например, программы для
-              трансляции OBS Studio, вы сможете добавить на экран плашку с
-              актуальным счетом. Смотрите раздел “сетевые функции”
-            </p>
-          </div>
-          <div class="card">
-            <p>
-              Любой пульт может быть привязан к конкретному табло, что позволяет
-              работать с несколькими табло в одном зале
-            </p>
-          </div>
-        </div>
-        <div class="img__container">
-          <img src="assets/OBS.png" class="obs" alt="obs" />
-        </div>
-      </section>
-      <section class="section" id="connect">
-        <h2>Подключение</h2>
-        <div class="stepper__container">
-          <div class="circle">1</div>
-          <p>Найдите разъем питания с задней стороны</p>
-          <div class="vertical">
-            <div class="line"></div>
-          </div>
-          <div class="circle">2</div>
-          <p>
-            Вставьте в разъем штекер блока питания ( в комплекте ), а сам блок
-            питания включите в розетку 128-220 вольт
-          </p>
-          <div class="vertical">
-            <div class="line"></div>
-          </div>
-          <div class="circle">3</div>
-          <p>Табло включится и готово к работе</p>
-        </div>
-        <h3>Управляется с пульта</h3>
-      </section>
-      <section class="section" id="pult">
-        <h2>Пульт управления</h2>
-        <div class="pult__container">
-          <div class="pult__block">
-            <div class="pult__block__container">
-              <p>
-                Ваш пульт управления уже привязан именно к вашему табло и не
-                повлияет на работу других табло нашего производства
-              </p>
-              <img src="assets/pult1.jpg" alt="pult" />
-            </div>
-          </div>
-          <div class="pult__block">
-            <div class="pult__block__container">
-              <img src="assets/pult2.jpg" alt="pult" />
-              <p>
-                Однако, если вы потеряете пульт, или он придёт в негодность, вы
-                всегда можете написать нам в поддержку, и мы пришлем вам другой
-                пульт
-              </p>
-            </div>
-          </div>
-          <div class="pult__block">
-            <div class="pult__block__container">
-              <img src="assets/pult3.jpg" alt="pult" />
-              <p>Цифровые кнопки добавляют очки активному игроку</p>
-            </div>
-          </div>
-          <div class="pult__control">
-            <p><b>ESC</b> - Короткое - отменит последнюю команду.</p>
-            <p><b>Длинное</b> нажатие обнулит табло</p>
-            <p><b>ST</b> - включение таймера на удар</p>
-            <p><b>><</b>- переход хода</p>
-            <p>
-              <b>FT - Длинное нажатие</b> переключает по кругу режимы табло (
-              классика, Шутаут, 900 )
-            </p>
-          </div>
-        </div>
-      </section>
-      <section class="section" id="mode">
-        <h2>Режим игры</h2>
-        <div class="mode">
-          <div>
-            <p>Классический снукер</p>
-            <img src="/assets/mode_snooker.jpg" alt="mode-snooker" />
-            <p>1- счет по фреймам</p>
-            <p>2- текущий брейк</p>
-            <p>3 - счет в партии</p>
-            <p>4 - таймер удара</p>
-          </div>
-          <div>
-            <p>Шут-Аут</p>
-            <img src="/assets/mode_shoot_out.jpg" alt="mode-shoot-out" />
-            <p>1- счет по фреймам</p>
-            <p>2- текущий брейк</p>
-            <p>3 - счет в партии</p>
-            <p>4 - таймер удара</p>
-          </div>
-          <div>
-            <p>Снукер-900</p>
-            <img src="/assets/mode_snooker_900.jpg" alt="mode-snooker-900" />
-            <p>1- счет по фреймам</p>
-            <p>2- текущий брейк</p>
-            <p>3 - счет в партии</p>
-            <p>4 - таймер удара</p>
-          </div>
-          <div class="mode-function__container">
-            <p>Функциональный режим</p>
-            <img src="/assets/mode_function.jpg" alt="mode-function" />
-            <p>
-              <b>FT</b> - Короткое нажатие включает ФУНКЦИОНАЛЬНЫЙ РЕЖИМ. Это
-              для счета по фреймам, звук вкл/выкл и тп.
-            </p>
-            <p>И справа, и слева будут гореть стрелки</p>
-            <p>
-              В этом режиме табло примет только одну команду, и вернется в
-              игровой режим
-            </p>
-            <h3>Команды:</h3>
-            <p>2 - добавить счет по фреймам слева</p>
-            <p>3 - добавить счет по фреймам справа</p>
-            <p>ST- вкл/выкл автоматического включения таймера удара</p>
-            <p>
-              Если вы случайно вошли в Функциональный режим, просто нажмите ESC
-            </p>
-          </div>
-        </div>
-      </section>
-      <section class="section" id="network">
-        <h2>Сетевые функции</h2>
-      </section>
-      <section class="section" id="download">
-        <h2>Скачивание</h2>
-      </section>
-      <section class="section" id="examples">
-        <h2>Примеры использования</h2>
-      </section> -->
     </main>
     <footer class="footer">
       <h6 class="contacts__title">Контакты</h6>
