--- a/index.html
+++ b/index.html
@@ -83,28 +83,288 @@
               <div></div>
               <p>Очень легкое! Без проблем можно повесить табло над столом</p>
             </div>
+            <div class="features__list__element">
+              <div></div>
+              <p>
+                Табло очень надёжно и сохраняет счет во время сбоя питания. У
+                игроков не будет сомнений, какой именно сейчас счет
+              </p>
+            </div>
+            <div class="features__list__element">
+              <div></div>
+              <p>
+                При окончании времени на матч табло свистит в стиле окончания
+                футбольного матча
+              </p>
+            </div>
+            <div class="features__list__element">
+              <div></div>
+              <p>
+                За три секунды до окончания времени на удар табло издает
+                высокие, хорошо слышимые игрокам, звуки
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section banner-full-width" id="banner2">
+        <h3>Несколько режимов работы</h3>
+      </section>
+      <section class="section" id="carousel">
+        <div class="carousel">
+          <div class="carousel__prev carousel__button">
+            <img src="assets/chevron_left.svg" />
+          </div>
+          <div class="carousel__next carousel__button">
+            <img src="assets/chevron_right.svg" />
+          </div>
+          <div class="carousel__inner">
+            <div class="card">231</div>
+            <div class="card">
+              <div class="carousel__text__container">
+                <p class="card__title">Режим “Шут-Аут”</p>
+
+                <div class="carousel__text__block">
+                  <img src="assets/strong.svg" />
+
+                  <div class="card__text">
+                    <p>
+                      Изготовлен из ударопрочного авиационного алюминия <br />
+                      Из такого алюминия делают Боинги!
+                    </p>
+                  </div>
+                </div>
+                <div class="carousel__text__block">
+                  <img src="assets/protect.svg" />
+                  <div class="card__text">
+                    <p>
+                      Выдерживает нагрузку 220 кг Не страшно наступить или
+                      случайно сесть.
+                    </p>
+                  </div>
+                </div>
+                <div class="carousel__text__block">
+                  <img src="assets/refresh.svg" />
+                  <div class="card__text">
+                    <p>
+                      Уникальный поворотный механизм крышки Не откроется
+                      случайно в кармане или рюкзаке.
+                    </p>
+                  </div>
+                </div>
+                <div class="carousel__text__block">
+                  <img src="assets/light.svg" />
+
+                  <div class="card__text">
+                    <p>
+                      Удобно носить с собой Кейс с наушниками весит всего 49 г.
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel__img__container">
+                <img src="assets/panel.jpg" />
+              </div>
+            </div>
+            <div class="card">321</div>
+          </div>
+          <div class="carousel__dots">
+            <button class="carousel__dot active"></button
+            ><button class="carousel__dot"></button
+            ><button class="carousel__dot"></button>
+          </div>
+        </div>
+      </section>
+      <section class="section banner-full-width" id="banner3">
+        <h3>Пульт для рефери</h3>
+      </section>
+      <section class="section">
+        <div class="pult__container">
+          <img src="assets/pult2.jpg" class="pult__image" />
+          <div class="pult__features__container">
+            <p class="pult__title">Что хорошего?</p>
+            <div class="pult__features__list">
+              <div>
+                <img src="assets/pult_icon1.svg" />
+                <p>
+                  <b>Полностью новое программное обеспечение</b><br />
+                  Стабильное соединение через Bluetooth и синхронное
+                  воспроизведение без задержек звука
+                </p>
+              </div>
+              <div>
+                <img src="assets/pult_icon2.svg" />
+                <p>
+                  <b>Идеальны для занятий спортом</b><br />
+                  Не выпадают из ушей даже при активной тренировке
+                </p>
+              </div>
+              <div>
+                <img src="assets/pult_icon3.svg" />
+                <p>
+                  <b>Максимальная автономность до 17 часов</b><br />
+                  Емкие аккумуляторы и зарядка от кейса
+                </p>
+              </div>
+              <div>
+                <img src="assets/pult_icon4.svg" />
+                <p>
+                  <b>Сенсорное управление</b><br />
+                  Управляйте музыкой одним касанием
+                </p>
+              </div>
+              <div>
+                <img src="assets/pult_icon1.svg" />
+                <p>
+                  <b>Полностью новое программное обеспечение</b><br />
+                  Стабильное соединение через Bluetooth и синхронное
+                  воспроизведение без задержек звука
+                </p>
+              </div>
+              <div>
+                <img src="assets/pult_icon1.svg" />
+                <p>
+                  <b
+                    >Стабильное соединение через Bluetooth и синхронное
+                    воспроизведение без задержек звука</b
+                  ><br />
+                  Не выпадают из ушей даже при активной тренировке
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section banner-full-width" id="banner4">
+        <h3>
+          Подключается к любым программам для стрима с телефона и компьютера!
+        </h3>
+      </section>
+      <section class="section" id="stream">
+        <p class="stream__title">Наушники на целый день!</p>
+        <div class="stream__comment">
+          <img
+            src="assets/chevron_left.svg"
+            class="stream__chevron stream__chevron-left"
+          />
+          <img
+            src="assets/chevron_right.svg"
+            class="stream__chevron stream__chevron-right"
+          />
+          <span class="stream__comment__rating">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              height="24px"
+              viewBox="0 -960 960 960"
+              width="24px"
+            >
+              <path
+                d="m384-334 96-74 96 74-36-122 90-64H518l-38-124-38 124H330l90 64-36 122ZM233-120l93-304L80-600h304l96-320 96 320h304L634-424l93 304-247-188-247 188Zm247-369Z"
+              />
+            </svg>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              height="24px"
+              viewBox="0 -960 960 960"
+              width="24px"
+            >
+              <path
+                d="m384-334 96-74 96 74-36-122 90-64H518l-38-124-38 124H330l90 64-36 122ZM233-120l93-304L80-600h304l96-320 96 320h304L634-424l93 304-247-188-247 188Zm247-369Z"
+              />
+            </svg>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              height="24px"
+              viewBox="0 -960 960 960"
+              width="24px"
+            >
+              <path
+                d="m384-334 96-74 96 74-36-122 90-64H518l-38-124-38 124H330l90 64-36 122ZM233-120l93-304L80-600h304l96-320 96 320h304L634-424l93 304-247-188-247 188Zm247-369Z"
+              />
+            </svg>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              height="24px"
+              viewBox="0 -960 960 960"
+              width="24px"
+            >
+              <path
+                d="m384-334 96-74 96 74-36-122 90-64H518l-38-124-38 124H330l90 64-36 122ZM233-120l93-304L80-600h304l96-320 96 320h304L634-424l93 304-247-188-247 188Zm247-369Z"
+              />
+            </svg>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              height="24px"
+              viewBox="0 -960 960 960"
+              width="24px"
+            >
+              <path
+                d="m384-334 96-74 96 74-36-122 90-64H518l-38-124-38 124H330l90 64-36 122ZM233-120l93-304L80-600h304l96-320 96 320h304L634-424l93 304-247-188-247 188Zm247-369Z"
+              />
+            </svg>
+          </span>
+          <div class="stream__comment__container">
+            <div class="stream__comment__avatar">
+              <p id="text__avatar">A</p>
+            </div>
+            <div>
+              <b>Дмитрий, организатор турниров</b>
+              <p>
+                По работе приходиться часто ездить в поезде часов по 7-8. Теперь
+                в плацкарте удобно слушать музыку и аудиокниги, провода не
+                мешают. Можно убрать телефон в сумку и ходить по вагону, и
+                заряда хватает на всю дорогу!
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="stream__image__container">
+          <img src="assets/pult1.jpg" alt="пульт" />
+          <img src="assets/mode_function.jpg" alt="табло" />
+        </div>
+      </section>
+      <section class="section" id="instructions">
+        <h3>Инструкции по подключению</h3>
+        <div class="instructions__list">
+          <div>
+            <p>Larix</p>
+            <img src="assets/larix.png" alt="larix" />
+          </div>
+          <div>
+            <p>Prism</p>
+            <img src="assets/prism.png" alt="prism" />
+          </div>
+          <div>
+            <p>Donation Alerts</p>
+            <img src="assets/donation.jpg" alt="donation" />
+          </div>
+          <div>
+            <p>OBS studio</p>
+            <img src="assets/obs_logo.png" alt="obs" />
+          </div>
+          <div>
+            <p>vMix</p>
+            <img src="assets/vmix.png" alt="vmix" id="vmix" />
           </div>
         </div>
       </section>
       <section class="section" id="delivery">
-        <div class="delivery__title__container">
-          <div class="delivery__title">
-            <p>Комплектация</p>
-            <img src="assets/chevron_right.svg" />
-          </div>
-        </div>
         <div class="delivery__scheme__container">
-          <h2>Как оформить заказ</h2>
+          <h2>Как сделать заказ</h2>
           <div class="delivery__scheme">
             <div class="delivery__step">
-              <img src="assets/delivery1.png" alt="заявка" />
+              <div>
+                <img src="assets/delivery1.svg" alt="заявка" />
+              </div>
               <p>
                 Оставьте заявку на нашем сайте или позвоните по номеру <br />
                 <a href="tel:88006007529">8 (800) 600-75-29</a>
               </p>
             </div>
             <div class="delivery__step">
-              <img src="assets/delivery2.png" alt="доставка" />
+              <div>
+                <img src="assets/delivery2.svg" alt="доставка" />
+              </div>
               <p>
                 Мы доставляем по всей России и странам СНГ курьером или через
                 пункты самовызова: Почта России (в т.ч. EMS), СДЭК, Boxberry и
@@ -113,7 +373,9 @@
               </p>
             </div>
             <div class="delivery__step">
-              <img src="assets/delivery3.png" alt="оплата" />
+              <div>
+                <img src="assets/delivery3.svg" alt="оплата" />
+              </div>
               <p>
                 Оплата любым удобным способом: оплатите на сайте, картой или
                 через СБП (QR-код) со скидкой. Или при получении – наличными или
@@ -121,106 +383,6 @@
                 менеджер магазина поможет решить вопрос во время звонка для
                 подтверждения заказа.
               </p>
-            </div>
-          </div>
-        </div>
-        <div class="delivery__button__container">
-          <button class="delivery__button">Оставить заявку</button>
-        </div>
-      </section>
-      <section class="section" id="carousel">
-        <div class="plashka__container">
-          <div class="plashka">
-            <p class="plashka__title">GC Power plus</p>
-            <p class="plashka__price">3 490 ₽</p>
-            <div class="plashka__count">
-              <img src="assets/zagluska.svg" />
-              <div>
-                <p>Купили</p>
-                <p>24 000</p>
-              </div>
-            </div>
-          </div>
-          <div>
-            <h2>Гуру многозадачности</h2>
-          </div>
-          <div class="plashka__buttons">
-            <div>
-              <img src="assets/zagluska.svg" />
-              <p>Видеообзор</p>
-            </div>
-            <div>
-              <img src="assets/zagluska.svg" />
-              <p>В корзину</p>
-            </div>
-            <div>
-              <img src="assets/zagluska.svg" />
-              <p>Фото товара</p>
-            </div>
-          </div>
-          <div class="carousel">
-            <div class="carousel__prev carousel__button">
-              <img src="assets/chevron_left.svg" />
-            </div>
-            <div class="carousel__next carousel__button">
-              <img src="assets/chevron_right.svg" />
-            </div>
-            <div class="carousel__inner">
-              <div class="card">231</div>
-              <div class="card">
-                <div class="carousel__text__container">
-                  <p class="card__title">На пике технологий!</p>
-                  <div class="carousel__text__block">
-                    <img src="assets/zagluska.svg" />
-                    <div class="card__text">
-                      <b>Заряжает в 3 раза быстрее</b>
-                      <p>
-                        Подбирает оптимальный ток и напряжение в зависимости от
-                        процента заполнения батареи
-                      </p>
-                    </div>
-                  </div>
-                  <div class="carousel__text__block">
-                    <img src="assets/zagluska.svg" />
-                    <div class="card__text">
-                      <b>Заряжает в 3 раза быстрее</b>
-                      <p>
-                        Подбирает оптимальный ток и напряжение в зависимости от
-                        процента заполнения батареи
-                      </p>
-                    </div>
-                  </div>
-                  <div class="carousel__text__block">
-                    <img src="assets/zagluska.svg" />
-                    <div class="card__text">
-                      <b>Заряжает в 3 раза быстрее</b>
-                      <p>
-                        Подбирает оптимальный ток и напряжение в зависимости от
-                        процента заполнения батареи
-                      </p>
-                    </div>
-                  </div>
-                  <div class="carousel__text__block">
-                    <img src="assets/zagluska.svg" />
-                    <div class="card__text">
-                      <b>Заряжает в 3 раза быстрее</b>
-                      <p>
-                        Подбирает оптимальный ток и напряжение в зависимости от
-                        процента заполнения батареи
-                      </p>
-                    </div>
-                  </div>
-                </div>
-                <div class="carousel__img__container">
-                  <img src="assets/pult1.jpg" />
-                </div>
-              </div>
-              <div class="card">321</div>
-            </div>
-            <div class="carousel__dots">
-              <button class="carousel__dot active"></button
-              ><button class="carousel__dot"></button
-              ><button class="carousel__dot"></button>
             </div>
           </div>
         </div>
